--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -26,7 +26,7 @@ body.dark-mode {
 }
 
 body.dark-mode {
-    background: #18191a;
+    background: #121521;
     min-height: 100vh;
     padding: 0;
     margin: 0;
@@ -228,14 +228,16 @@ body.dark-mode h2.profile-desc {
 }
 
 body.dark-mode .about-me-area {
-    background-color: #1e1e1e;
+    background-color: #1c1f2b !important;
     color: #fff;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .about-me-content {
-    background-color: #2e2e2e;
+    background-color: #292d3d;
     transition: all 0.5s ease;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .about-me-content h4,
@@ -248,7 +250,7 @@ body.dark-mode .about-me-content:hover {
 }
 
 body.dark-mode .follow-area {
-    background-color: #18191a;
+    background-color: #121521;
     color: #fff;
     transition: all 0.5s ease;
 }
@@ -288,7 +290,7 @@ body.dark-mode .about-me-summary:hover {
 body.dark-mode .port-summary {
     color: #fff;
     transition: all 0.5s ease;
-    background-color: #2e2e2e;
+    background-color: #1c1f2b;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -299,7 +301,7 @@ body.dark-mode .port-summary:hover {
 }
 
 body.dark-mode .about-me-area {
-    background-color: #1e1e1e !important;
+    background-color: #1c1f2b !important;
     transition: all 0.5s ease;
 }
 
@@ -339,11 +341,11 @@ body.dark-mode .btn.show {
 
 /* ------------------------------------------ 4.0 Works By NRFZ/Blogs (Featured/Main) ------------------------------------------ */
 body.dark-mode .wbnrfz-works {
-    background-color: #18191a;
+    background-color: #121521;
 }
 
 body.dark-mode .ftco-section-blog {
-    background-color: #18191a;
+    background-color: #121521;
     transition: all 0.5s ease;
 }
 
@@ -631,7 +633,7 @@ body.dark-mode .scrollable-tabs-container a.active {
 /* ------------------------------------------ 9.0 Navigation ------------------------------------------ */
 
 body.dark-mode .navbar {
-    background: #0e0e0e91;
+    background: #06070ca1;
     backdrop-filter: blur(25px);
     border: 1px solid #2b2b2b33;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
@@ -746,7 +748,6 @@ body.dark-mode .social-link {
 }
 
 body.dark-mode .footer-copy {
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
     color: #fff;
 }
 
