--- a/css/style-mobNav.css
+++ b/css/style-mobNav.css
@@ -11,7 +11,7 @@ body.dark-mode .page-header-section {
 }
 
 .nav-link.active {
-    background: linear-gradient(84deg, rgba(81, 167, 190, 1) 0%, rgba(53, 64, 117, 1) 100%) !important;
+    background: linear-gradient(58deg, #97a19f 0%, #606b94 100%) !important;
 }
 
 .mobile-bottom-nav,
@@ -86,7 +86,7 @@ body.dark-mode li.breadcrumb-item a {
 }
 
 .lg-menu {
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 0px;
     font-weight: bolder;
 }
@@ -250,7 +250,7 @@ body.dark-mode .list-group-item:hover {
         pointer-events: none;
     }
 
-      .mobile-bottom-nav::before {
+    .mobile-bottom-nav::before {
         content: '';
         position: absolute;
         left: 0;
@@ -270,8 +270,8 @@ body.dark-mode .list-group-item:hover {
     }
 
     .mobile-bottom-nav ul {
-        background: #ffffffb2;
-        backdrop-filter: blur(25px);
+        background: #f1f1f193;
+        backdrop-filter: blur(15px);
         border-radius: 50px;
         box-shadow: 0 2px 16px rgba(0, 0, 0, 0.08);
         display: flex;
@@ -285,8 +285,8 @@ body.dark-mode .list-group-item:hover {
 
 
     body.dark-mode .mobile-bottom-nav ul {
-        background: #1f243bc9;
-        backdrop-filter: blur(25px);
+        background: #1f243bbe;
+        backdrop-filter: blur(15px);
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
@@ -305,7 +305,7 @@ body.dark-mode .list-group-item:hover {
     }
 
     .mobile-bottom-nav li.active {
-        background: linear-gradient(84deg, rgba(81, 167, 190, 1) 0%, rgba(53, 64, 117, 1) 100%);
+        background: linear-gradient(58deg, #97a19f 0%, #505a7d 100%);
     }
 
     .mobile-bottom-nav .icon {
