--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ input:required {
 
 .follow-area.clearfix {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 120px;
     background-color: #ececea;
 }
 
@@ -548,7 +548,7 @@ input:required {
     padding: 0 30px;
     text-align: center;
     text-transform: capitalize;
-    background-color: #de652e;
+    background-color: #7e899a;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
     color: #252525;
     border-radius: 60px;
@@ -745,18 +745,6 @@ header {
     padding: 20px;
 }
 
-#profile-picture {
-    background-image: url("../img/bg-img/about.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 110px;
-    width: 270px;
-    height: 270px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
 
 #title {
     margin-top: 24px;
@@ -1417,7 +1405,7 @@ img.profile-pic {
     font-size: 16px;
     font-weight: bold;
     text-transform: capitalize;
-    color: #db9119;
+    color: #7e899a;
     margin: 0;
     cursor: default;
 }
@@ -1432,7 +1420,7 @@ img.profile-pic {
 
 .skill-ara .single-skill .progress-bar {
     background: #87bee8;
-    background: linear-gradient(58deg, rgba(190, 62, 48, 1) 0%, rgba(220, 147, 25, 1) 100%);
+    background: linear-gradient(58deg, #97a19f 0%, #606b94 100%);
     width: 0%;
     border-radius: 15px;
 }
@@ -3313,8 +3301,7 @@ li.breadcrumb-item a:hover {
 .footer-copy {
     text-align: center;
     margin-top: 3px;
-    padding-top: 20px;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding-top: 10px;
     color: #000;
     font-size: 0.85rem;
     cursor: default;
