--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -415,8 +415,6 @@ body.dark-mode .banner-eicw img {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
-    border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
 }
 
 body.dark-mode h2.page-title {
@@ -532,7 +530,7 @@ body.dark-mode .wbnrfz_details {
 }
 
 body.dark-mode .wbnrfz_details_body {
-    background: #18191a;
+    background: #121521;
     margin-top: -3.2em;
     padding-top: 3em;
     padding-bottom: 2em;
@@ -556,7 +554,7 @@ body.dark-mode .wbnrfz_details_blog {
 }
 
 body.dark-mode .wbnrfz_eicw {
-    background: #18191a;
+    background: #121521;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     padding-bottom: 0em;
@@ -592,7 +590,7 @@ body.dark-mode .scrollable-tabs-container a {
     display: inline-block;
     border-radius: 24px;
     white-space: nowrap;
-    background-color: #494949;
+    background-color: #393e53;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -621,11 +619,6 @@ body.dark-mode .scrollable-tabs-container svg {
     color: #fff;
     transition: all 0.3s ease-in-out;
     border-radius: 50%;
-}
-
-body.dark-mode .scrollable-tabs-container a.active {
-    background: linear-gradient(58deg, rgba(190, 62, 48, 1) 0%, rgba(220, 147, 25, 1) 100%);
-    color: #fff;
 }
 
 /* ------------------------------------------*/
