--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,7 @@ input:required {
 #scroll-indicator {
     height: 100%;
     width: 0;
-    background: linear-gradient(90deg, #de650f 0%, #fd1d1d 50%, #df9e43 100%);
+    background: linear-gradient(58deg, #97a19f 0%, #606b94 100%);
     transition: width 0.1s ease;
 }
 
@@ -2439,7 +2439,6 @@ li.breadcrumb-item.active a:hover {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
-    /* border: 1px solid #2b2b2b33; */
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
@@ -2790,7 +2789,7 @@ li.breadcrumb-item a:hover {
 }
 
 .scrollable-tabs-container a.active {
-    background: linear-gradient(58deg, rgba(190, 62, 48, 1) 0%, rgba(220, 147, 25, 1) 100%);
+    background: linear-gradient(58deg, #97a19f 0%, #606b94 100%);
     color: #fff;
 }
 
