--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -183,7 +183,7 @@ body.dark-mode .cookiebanner span {
 /* ---- Progress Bar */
 body.dark-mode .single-skill .progress {
     transition: all 0.5s ease;
-    background-color: #2e2e2e;
+    background-color: #292d3d;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -277,7 +277,7 @@ body.dark-mode .about-me-summ {
 body.dark-mode .about-me-summary {
     color: #fff;
     transition: all 0.5s ease;
-    background-color: #2e2e2e;
+    background-color: #292d3d;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -447,7 +447,7 @@ body.dark-mode li.breadcrumb-item a {
 
 body.dark-mode .timeline-item {
     transition: all 0.5s ease;
-    background-color: #2e2e2e;
+    background-color: #292d3d;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
