--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -127,6 +127,15 @@
 
 /* ---- */
 
+/* ---- 1.0.4a Min Width: 992px */
+@media (min-width: 995px) {
+    #hero {
+        height: 100vh;
+    }
+}
+
+/* ---- */
+
 /* ---- 1.0.4 Max Width: 992px */
 @media (max-width: 992px) {
     #hero {
@@ -173,6 +182,10 @@
       max-width: 600px;
     }
   }
+
+  /* ---- */
+
+  /* ---- 1.0.4b Max Width: 991.98px */
   @media (max-width: 991.98px) {
     .video-row video {
       width: 100%;
