--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -561,7 +561,7 @@ body.dark-mode .wbnrfz_eicw {
 
 
 body.dark-mode .form-control {
-display: block;
+    display: block;
     width: 100%;
     color: #fff;
     appearance: none;
@@ -624,10 +624,9 @@ body.dark-mode .scrollable-tabs-container svg {
 /* ------------------------------------------ 9.0 Navigation ------------------------------------------ */
 
 body.dark-mode .navbar {
-    background: #06070ca1;
+    background: #1a1f35be;
     backdrop-filter: blur(25px);
-    border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 50px;
     padding: 10px 25px;
     display: flex;
