--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ input:required {
 }
 
 .hyperlink {
-    color: #3294ac;
+    color: #8d9aad;
 }
 
 .hyperlink:hover {
@@ -579,7 +579,7 @@ input:required {
     padding: 0 30px;
     text-align: center;
     text-transform: capitalize;
-    background-color: #de652e;
+    background-color: #7e899a;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
     color: #252525;
     border-radius: 60px;
@@ -1599,7 +1599,7 @@ figcaption {
     width: 100%;
 }
 
-figcaption > a {
+figcaption>a {
     display: block;
     width: 100%;
     text-align: center;
@@ -1616,7 +1616,7 @@ figcaption p {
 figcaption p a {
     margin-top: 10px;
     font-size: 15px;
-    color: #3294ac;
+    color: #7e899a;
 }
 
 figcaption p a:hover {
@@ -1788,6 +1788,10 @@ hr {
 .ftco-section {
     background-color: #ececea;
     padding-bottom: 10px;
+}
+
+.ftco-animate {
+    padding-top: 3em;
 }
 
 #proposal {
@@ -2479,7 +2483,11 @@ h2.page-title {
 
 .cp-img {
     border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
+}
+
+.ps-img {
+    border-radius: 20px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
 }
 
